Prevent main overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ main {
   right: 0;
   background-image: url('./images/backgroundDarkWatercolor.jpg');
   background-size: cover;
+  overflow: hidden;
 
   display: flex;
 
